@@ -19,9 +19,10 @@ from PySide6.QtWidgets import (QApplication, QDialog, QFrame, QHBoxLayout,
     QLabel, QSizePolicy, QSpacerItem, QVBoxLayout,
     QWidget)
 
-from qfluentwidgets import (BodyLabel, ComboBox, HorizontalSeparator, LineEdit,
-    PasswordLineEdit, PillPushButton, PrimaryPushButton, PushButton,
-    ScrollArea, StrongBodyLabel, SwitchButton, ToggleButton)
+from qfluentwidgets import (BodyLabel, CheckBox, ComboBox, HorizontalSeparator,
+    LineEdit, PasswordLineEdit, PillPushButton, PrimaryPushButton,
+    PushButton, ScrollArea, StrongBodyLabel, SwitchButton,
+    ToggleButton)
 
 class Ui_Dialog(object):
     def setupUi(self, Dialog):
@@ -88,7 +89,7 @@ class Ui_Dialog(object):
         self.ScrollArea.setWidgetResizable(True)
         self.scrollAreaWidgetContents = QWidget()
         self.scrollAreaWidgetContents.setObjectName(u"scrollAreaWidgetContents")
-        self.scrollAreaWidgetContents.setGeometry(QRect(0, 0, 390, 911))
+        self.scrollAreaWidgetContents.setGeometry(QRect(0, 0, 390, 939))
         self.verticalLayout_21 = QVBoxLayout(self.scrollAreaWidgetContents)
         self.verticalLayout_21.setObjectName(u"verticalLayout_21")
         self.frame = QFrame(self.scrollAreaWidgetContents)
@@ -386,6 +387,11 @@ class Ui_Dialog(object):
         self.BodyLabel_15.setWordWrap(True)
 
         self.verticalLayout_8.addWidget(self.BodyLabel_15)
+
+        self.CheckBox = CheckBox(self.SettingBox11)
+        self.CheckBox.setObjectName(u"CheckBox")
+
+        self.verticalLayout_8.addWidget(self.CheckBox)
 
 
         self.verticalLayout_12.addWidget(self.SettingBox11)
@@ -697,6 +703,7 @@ class Ui_Dialog(object):
         self.BodyLabel_16.setText(QCoreApplication.translate("Dialog", u"Login", None))
         self.BodyLabel_17.setText(QCoreApplication.translate("Dialog", u"Password", None))
         self.BodyLabel_15.setText(QCoreApplication.translate("Dialog", u"<html><head/><body><p><span style=\" color:#808080;\">When enabled, this setting allows you to specify a custom proxy server for accessing the YouTube Music website. </span></p></body></html>", None))
+        self.CheckBox.setText(QCoreApplication.translate("Dialog", u"Allow pytube (downloader) access to proxy", None))
         self.BodyLabel_2.setText(QCoreApplication.translate("Dialog", u"Save and restore mini-player position", None))
         self.BodyLabel_3.setText(QCoreApplication.translate("Dialog", u"<html><head/><body><p><span style=\" color:#808080;\">When enabled, the mini-player will open at the last position it was moved to.</span></p></body></html>", None))
         self.label.setText("")
