@@ -1,7 +1,6 @@
 import logging
 import os
 import re
-
 from PyQt5.QtCore import QThread, pyqtSignal
 from pytubefix import YouTube, Playlist
 
@@ -14,6 +13,7 @@ class DownloadThread(QThread):
         self.url = url
         self.download_folder = download_folder
         self.title = "Unknown Title"
+        self.window = parent
 
     def run(self):
         try:
@@ -28,14 +28,24 @@ class DownloadThread(QThread):
             self.download_finished.emit(self.download_folder, self.title)
 
     def download_youtube(self):
-        yt = YouTube(self.url)
+        if self.window.allow_pytube_acces_to_proxy_setting == 1:
+            proxies = self.get_proxies()
+        else:
+            proxies = None
+
+        yt = YouTube(self.url, proxies=proxies)
         self.title = yt.title
         sanitized_title = self.sanitize_filename(yt.title)
         stream = yt.streams.get_audio_only()
-        stream.download(output_path=self.download_folder, filename=f"{sanitized_title}.mp3", timeout=30)
+        stream.download(output_path=self.download_folder, filename=f"{sanitized_title}.mp3")
 
     def download_playlist(self):
-        pl = Playlist(self.url)
+        if self.window.allow_pytube_acces_to_proxy_setting == 1:
+            proxies = self.get_proxies()
+        else:
+            proxies = None
+
+        pl = Playlist(self.url, proxies=proxies)
         self.title = self.sanitize_filename(pl.title)
         playlist_folder = os.path.join(self.download_folder, self.title)
         os.makedirs(playlist_folder, exist_ok=True)
@@ -44,9 +54,24 @@ class DownloadThread(QThread):
             try:
                 sanitized_title = self.sanitize_filename(video.title)
                 stream = video.streams.get_audio_only()
-                stream.download(output_path=playlist_folder, filename=f"{sanitized_title}.mp3", timeout=30)
+                stream.download(output_path=playlist_folder, filename=f"{sanitized_title}.mp3")
             except Exception as e:
                 logging.error(f"DownloadThread UnexpectedError: {str(e)}")
 
     def sanitize_filename(self, filename):
         return re.sub(r'[<>:"/\\|?*]', '_', filename)
+
+    def get_proxies(self):
+        if self.window.proxy_type_setting in ["HttpProxy", "Socks5Proxy"]:
+            proxy_address = f"{self.window.proxy_host_name_setting}:{self.window.proxy_port_setting}"
+
+            if self.window.proxy_login_setting and self.window.proxy_password_setting:
+                proxy_address = f"{self.window.proxy_login_setting}:{self.window.proxy_password_setting}@{proxy_address}"
+                
+            proxy_type = "http" if self.window.proxy_type_setting == "HttpProxy" else "socks5"
+            return {
+                "http": f"{proxy_type}://{proxy_address}",
+                "https": f"{proxy_type}://{proxy_address}"
+            }
+        else:
+            return None
